[GF#32510] Remove unused local variables and redundant null checking and improve error handling. [KLO, 021113]
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncim/trunk@1380 b145b987-6716-48ef-8e4a-68a7679c2f12