@@ -572,7 +572,8 @@ public class JSONArray implements Serializable {
      * @return this.
      */
     public JSONArray put(int value) {
-        put(new Integer(value));
+        //put(new Integer(value));
+        put(Integer.valueOf(value));
         return this;
     }
 
@@ -584,7 +585,8 @@ public class JSONArray implements Serializable {
      * @return this.
      */
     public JSONArray put(long value) {
-        put(new Long(value));
+        //put(new Long(value));
+        put(Long.valueOf(value));
         return this;
     }
 
@@ -670,7 +672,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, int value) throws JSONException {
-        put(index, new Integer(value));
+        put(index, Integer.valueOf(value));
         return this;
     }
 
@@ -685,7 +687,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, new Long(value));
+        put(index, Long.valueOf(value));
         return this;
     }
 
@@ -770,7 +772,8 @@ public class JSONArray implements Serializable {
         try {
             return '[' + join(",") + ']';
         } catch (Exception e) {
-            return null;
+            //return null;
+            return "";
         }
     }
 
